Bug 460059 Need IME state testing r+sr=roc